--- a/lab2/solutions/Part2_FaceDetection_Solution.ipynb
+++ b/lab2/solutions/Part2_FaceDetection_Solution.ipynb
@@ -68,11 +68,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "E46sWVKK6LP9"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "UsageError: Line magic function `%tensorflow_version` not found.\n"
+          ]
+        }
+      ],
       "source": [
         "# Import Tensorflow 2.0\n",
         "%tensorflow_version 2.x\n",
@@ -86,7 +94,7 @@
         "\n",
         "\n",
         "# Download and import the MIT Introduction to Deep Learning package\n",
-        "!pip install mitdeeplearning\n",
+        "# !pip install mitdeeplearning\n",
         "import mitdeeplearning as mdl"
       ]
     },
@@ -110,11 +118,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "RWXaaIWy6jVw"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'tf' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[2], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Get the training data: both images from CelebA and ImageNet\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m path_to_training_data \u001b[38;5;241m=\u001b[39m \u001b[43mtf\u001b[49m\u001b[38;5;241m.\u001b[39mkeras\u001b[38;5;241m.\u001b[39mutils\u001b[38;5;241m.\u001b[39mget_file(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrain_face.h5\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttps://www.dropbox.com/s/hlz8atheyozp1yx/train_face.h5?dl=1\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# Instantiate a TrainingDatasetLoader using the downloaded dataset\u001b[39;00m\n\u001b[0;32m      4\u001b[0m loader \u001b[38;5;241m=\u001b[39m mdl\u001b[38;5;241m.\u001b[39mlab2\u001b[38;5;241m.\u001b[39mTrainingDatasetLoader(path_to_training_data)\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'tf' is not defined"
+          ]
+        }
+      ],
       "source": [
         "# Get the training data: both images from CelebA and ImageNet\n",
         "path_to_training_data = tf.keras.utils.get_file('train_face.h5', 'https://www.dropbox.com/s/hlz8atheyozp1yx/train_face.h5?dl=1')\n",
@@ -156,8 +176,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Jg17jzwtbxDA",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "Jg17jzwtbxDA"
       },
       "outputs": [],
       "source": [
@@ -502,12 +522,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Great! Now that we have a more concrete sense of how VAEs work, let's explore how we can leverage this network structure to diagnoses hidden biases in facial detection classifiers."
-      ],
       "metadata": {
         "id": "bcpznUHHuR6I"
-      }
+      },
+      "source": [
+        "Great! Now that we have a more concrete sense of how VAEs work, let's explore how we can leverage this network structure to diagnoses hidden biases in facial detection classifiers."
+      ]
     },
     {
       "cell_type": "markdown",
@@ -522,6 +542,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "A3IOB3d61WSN"
+      },
       "source": [
         "### Semi-supervised VAE architecture\n",
         "\n",
@@ -534,10 +557,7 @@
         "We will apply our SS-VAE to a *supervised classification* problem -- the facial detection task. Importantly, note how the encoder portion in the SS-VAE architecture also outputs a single supervised variable, $z_o$, corresponding to the class prediction -- face or not face. Usually, VAEs are not trained to output any supervised variables (such as a class prediction)! This is the key distinction between the SS-VAE and a traditional VAE. \n",
         "\n",
         "Keep in mind that we only want to learn the latent representation of *faces*, as that is where we are interested in uncovering potential biases, even though we are training a model on a binary classification problem. So, we will need to ensure that, **for faces**, our SS-VAE model both learns a representation of the unsupervised latent variables, captured by the distribution $q_\\phi(z|x)$, and outputs a supervised class prediction $z_o$, but that, **for negative examples**, it only outputs a class prediction $z_o$."
-      ],
-      "metadata": {
-        "id": "A3IOB3d61WSN"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -852,6 +872,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "QfVngr5J6sj3"
+      },
       "source": [
         "### Linking model performance to uncertainty and bias\n",
         "\n",
@@ -864,10 +887,7 @@
         "1. What, if any, trends do you observe comparing the samples with the highest and lowest reconstruction loss?\n",
         "2. Based on these observations, which features seemed harder to learn for the VAE?\n",
         "3. How does reconstruction loss relate to uncertainty? Think back to our lecture on Robust & Trustworthy Deep Learning! What can you say about examples on which the model may be more or less uncertain?"
-      ],
-      "metadata": {
-        "id": "QfVngr5J6sj3"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -925,6 +945,12 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "8qcR9uvfCJku"
+      },
+      "outputs": [],
       "source": [
         "### Inspect different latent features\n",
         "\n",
@@ -957,26 +983,25 @@
         "ax[1].imshow(mdl.util.create_grid_of_images(recons, (1, num_steps)))\n",
         "ax[1].set_xlabel(\"Latent step\")\n",
         "ax[1].set_ylabel(\"Visualization\");\n"
-      ],
-      "metadata": {
-        "id": "8qcR9uvfCJku",
-        "cellView": "form"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "3ExRRPO2z27z"
+      },
       "source": [
         "\n",
         "### Inspect how the accuracy changes as a function of density in the latent space\n"
-      ],
-      "metadata": {
-        "id": "3ExRRPO2z27z"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "PnmPXmkGLBVU"
+      },
+      "outputs": [],
       "source": [
         "### Accuracy vs. density in latent space\n",
         "\n",
@@ -1007,12 +1032,7 @@
         "plt.plot(np.linspace(np.min(z_mean), np.max(z_mean), num_steps+1), accuracy_per_latent,'-o')\n",
         "plt.xlabel(\"Latent step\")\n",
         "plt.ylabel(\"Relative accuracy\")"
-      ],
-      "metadata": {
-        "id": "PnmPXmkGLBVU"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1042,6 +1062,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "mPRZReq4p68k"
+      },
       "source": [
         "## 2.9 Thinking ahead\n",
         "\n",
@@ -1054,10 +1077,7 @@
         "Hopefully this lab has shed some light on a few concepts, from vision based tasks, to VAEs, to algorithmic bias. We like to think it has, but we're biased ;).\n",
         "\n",
         "<img src=\"https://i.ibb.co/BjLSRMM/ezgif-2-253dfd3f9097.gif\" />"
-      ],
-      "metadata": {
-        "id": "mPRZReq4p68k"
-      }
+      ]
     }
   ],
   "metadata": {
@@ -1069,21 +1089,29 @@
       ],
       "provenance": []
     },
+    "gpuClass": "standard",
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
-      "version": "3.9.0 (v3.9.0:9cf6752276, Oct  5 2020, 11:29:23) \n[Clang 6.0 (clang-600.0.57)]"
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.0"
     },
     "vscode": {
       "interpreter": {
         "hash": "7812ea015bdcee6f23a998adcdd2ef97c151c0c241b7b7070987d9313e41299d"
       }
-    },
-    "gpuClass": "standard"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
